# luvi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Vagrantfile  alpine.sh  arm.sh  armv6l.sh  armv7l.sh  make.bat
cmake/Modules/: FindYaml.cmake
samples/daemonize.app/: main.lua
src/: daemonize.c  glibc-compat-symbols.h  lglfw.c  luvi.c  luvi.h  main.c
src/lua/: init.lua
